# rust-iggy

./: .gitignore  README.md  docker-compose.yml  example_config.json
iggy-microservices/: Cargo.toml  README.md  UPDATES.md  config.example.json
iggy-microservices/examples/: advanced_example.rs  consumer_example.rs  producer_example.rs
iggy-microservices/src/: client.rs  config.rs  consumer.rs  error.rs  lib.rs  producer.rs
iggy_consumer/: Cargo.toml
iggy_consumer/src/: main.rs
iggy_producer/: Cargo.toml  README.md
iggy_producer/src/: main.rs
