[package]
name = "iggy-microservices"
version = "0.1.0"
edition = "2024"

[dependencies]
iggy = "0.6.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
async-trait = "0.1.85"
config = "0.14.0"
thiserror = "1.0.69"
futures = "0.3.31"
rand = "0.9.2"
clap = { version = "4.5.51", features = ["derive"] }

[lib]
name = "iggy_microservices"
path = "src/lib.rs"

[[example]]
name = "producer_example"
path = "examples/producer_example.rs"

[[example]]
name = "consumer_example"
path = "examples/consumer_example.rs"

[[example]]
name = "advanced_example"
path = "examples/advanced_example.rs"
