[package]
name = "iggy_consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
iggy = "0.6.0"
tokio =  { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1.0.100"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
