[package]
name = "iggy_consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
iggy = "0.7.0"
tokio =  { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.100"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
